# lambda-mars-weather

./: .gitignore  Cargo.toml  Dockerfile  Makefile  Readme.md  crontab.sh  rpi.Dockerfile
.cargo/: config
src/: in_sight.rs  main.rs
