[package]
name = "mars_weather"
version = "0.1.0"
authors = ["Lainera <fistlain@hotmail.com>"]
edition = "2018"
autobins = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10", features = ["json"] }
futures = "0.3"
tokio = {version = "0.2", features = ["full"]}
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"] }
mongodb = "0.9.1"
bson = "0.14.0"
log = "^0.4"
simple_logger = "^1"
lambda_runtime = "0.2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
