[package]
name = "mars_weather"
version = "0.1.0"
authors = ["Lainera <fistlain@hotmail.com>"]
edition = "2018"
autobins = false

[dependencies]
reqwest = {version = "0.10", features = ["json", "blocking"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"] }
mongodb = { version = "1.2", features = ["sync"], default-features = false }
bson = "1.2.0"
log = "^0.4"
simple_logger = "1.11"
lambda_runtime = { version = "0.2", optional = true }

[features]
lambda = ["lambda_runtime"]

[[bin]]
name = "bootstrap"
path = "src/main.rs"
